Renamed Action Bar Title

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">cs478_ProjectThree_A1</string>
+    <string name="app_name">CS 478 Project Three: App 1</string>
     <string name="visit_new_york_city">Visit New York City</string>
     <string name="visit_orlando">Visit Orlando</string>
     <string name="new_york">New York</string>
